--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".GamePlayActivity"
-            android:label="@string/title_activity_game_play"></activity>
+        <activity android:name=".GameplayActivity"></activity>
         <activity android:name=".EmptyActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
